<?xml version="1.0"?>
<package>
  <name>ros_sot_robot_model</name>
  <version>0.0.0</version>
  <description>The ros_sot_robot_model package</description>

  <maintainer email="student@todo.todo">student</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_graph</build_depend>
  <build_depend>dynamic_graph_bridge</build_depend>
  <build_depend>jrl_dynamics_urdf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>urdf</build_depend>
  
  <run_depend>dynamic_graph_bridge</run_depend>
  <run_depend>jrl_dynamics_urdf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>dynamic-graph</run_depend>
 
</package>
